# promptdeploy

./: .agnix.toml  .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  PROMPTDEPLOY.md  README.md  WIGGUM-HANDOFF.md  WIGGUM-PLAN.md  WIGGUM-SCOPE.md  deploy.yaml  flake.nix  lefthook.yml  models.yaml  pyproject.toml  settings.yaml  single-source.md  statusline-command.sh  statusline-debug.sh
.github/workflows/: ci.yml
agents/: bash-reviewer.md  coq-reviewer.md  cpp-reviewer.md  elisp-reviewer.md  fess-auditor.md  haskell-pro.md  haskell-reviewer.md  nix-pro.md  nix-reviewer.md  perf-reviewer.md  persian-pro.md  persian-translator.md  prd-architect.md  python-reviewer.md  rocq-pro.md  rust-reviewer.md  security-reviewer.md  task-breakdown.md  typescript-pro.md  typescript-reviewer.md  web-searcher.md
bundles/: ponytail.yaml
commands/: analyze-pr.md  assess.md  breakdown.md  bugbot-stack.md  bugbot.md  capture -- personal.md  cleanup -- positron.md  code-review.md  commit.md  deep-review.md  discover-bundles.md  eliminate-dead-code.md  expense-report.md  fess.md  fix-alert -- personal.md  fix-ci.md  fix-github-issue.md  fix-integration.md  fix-transcript.md  fix.md  flaky-rust.md  forge -- positron.md  forge.md  gravity.md  halt.md  heavy -- positron.md  heavy.md  infer-tasks.md  initialize.md  install-service -- personal.md  johnw -- personal.md  johnw.md  journal.md  lefthook.md  markdown.md  medium.md  meeting-notes.md  narrative.md  nix-rebuild.md  partner-cleanup.md  (+33 more)
docs/: ponytail-integration.md  retest-categorical-boundary-sweep-review.md
docs/superpowers/plans/: 2026-04-22-claude-model-injection.md  2026-04-22-git-ai-split.md  2026-06-01-settings-yaml.md  2026-06-12-mcp-launcher-bridge.md  2026-06-28-narrative-prompt-handoff.md  2026-06-28-sitrep-prompt-handoff.md
docs/superpowers/specs/: 2026-04-22-claude-model-injection-design.md  2026-04-22-git-ai-split-design.md  2026-06-01-settings-yaml-design.md  2026-06-12-mcp-launcher-bridge-design.md  2026-06-15-remote-mcp-ssh-stdin-direct-merge.md
hooks/: agent-deck-claude.yaml  agent-deck-codex.yaml  claude-code.yaml  claude-vault.yaml  cozempic.yaml  git-ai.yaml  mem0.yaml  pre-commit  user.yaml
marketplaces/: claude-code-plugins.yaml  claude-plugins-official.yaml  schema.md  thedotmack.yaml
mcp/: Ref.yaml  anvil -- local.yaml  anvil-tools -- local.yaml  anvil-tools.yaml  anvil.yaml  claude-mem.yaml  context-hub.yaml  context7.yaml  drafts-hera.yaml  drafts.yaml  mem0.yaml  memory-vault.yaml  pal.yaml  perplexity.yaml  schema.md  sequential-thinking.yaml  stock-trader.yaml  task-master.yaml
memory/: MEMORY.md
nix/: hm-activation-test.nix  hm-module-test.nix  hm-module.nix  mk-activation-driver.nix
skills/: .promptdeploy-skill-links.json  README.md  ask  git-ai-search  prompt-analysis  translate-en
skills/anvil/: SKILL.md
skills/anvil/references/: tools.md
skills/caveman/: SKILL.md
skills/comment-audit/: SKILL.md
skills/comment-audit/scripts/: inventory_comments.py
skills/eliminate-dead-code/: SKILL.md
skills/fix-all/: SKILL.md
skills/fix-transcript/: SKILL.md
skills/forge/: SKILL.md
skills/it-voice/: SKILL.md
skills/johnw/: SKILL.md
skills/nixos/: SKILL.md
skills/node-red/: SKILL.md
skills/node-red/scripts/: create_flow_template.py  generate_uuid.py  validate_flow.py  wire_nodes.py
skills/parallelize/: SKILL.md
skills/persian/: SKILL.md  TERMS.csv
skills/retest/: SKILL.md
skills/retest/references/: spec.md
skills/skill-creator/: SKILL.md
skills/skill-creator/scripts/: init_skill.py  package_skill.py  quick_validate.py
skills/swiftui/: SKILL.md
skills/toolkit/: SKILL.md
skills/wiggum/: SKILL.md
src/promptdeploy/: __init__.py  bundle_catalog.py  bundle_projection.py  bundle_render.py  bundles.py  catalog.py  cli.py  config.py  deploy.py  envsubst.py  filetags.py  filters.py  frontmatter.py  imported_tree.py  manifest.py  names.py  output.py  poet.py  ponytail.py  ponytail_snapshot_probe.py  ponytail_transforms.py  settings.py  settings_sync.py  skilltree.py  source.py  ssh.py  status.py  validate.py  verify.py  yamlutil.py
src/promptdeploy/targets/: __init__.py  base.py  claude.py  codex.py  droid.py  gptel.py  opencode.py  remote.py
tests/: conftest.py  test_anvil_config.py  test_bundle_catalog.py  test_bundle_deploy.py  test_bundle_projection.py  test_bundle_render.py  test_bundle_target.py  test_bundles.py  test_catalog.py  test_claude_target.py  test_cli.py  test_codex_target.py  test_config.py  test_create_target.py  test_deploy.py  test_droid_target.py  test_envsubst.py  test_exact_deploy.py  test_filetags.py  test_filters.py  test_frontmatter.py  test_gptel_target.py  test_hooks_deploy.py  test_imported_materializer.py  test_imported_tree.py  test_list.py  test_main_entry.py  test_manifest.py  test_manifest_v2.py  test_manifest_v3.py  test_marketplaces_deploy.py  test_models_deploy.py  test_names.py  test_node_red_scripts.py  test_opencode_target.py  test_output.py  test_poet.py  test_ponytail_runtime.py  test_ponytail_snapshot_probe.py  test_ponytail_transforms.py  (+11 more)
