[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptdeploy"
version = "0.1.0"
description = "Deploy prompts, agents, skills, and MCP servers to multiple tools."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "Jinja2>=3.1", "ruamel.yaml>=0.18"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]

[project.scripts]
promptdeploy = "promptdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Git submodule with its own repo and tooling; also absent from the Nix
# flake's src (flakes omit submodule contents), so CI never lints it.
extend-exclude = ["translate-tool"]

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["promptdeploy"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
