[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptdeploy"
version = "0.1.0"
description = "Deploy prompts, agents, skills, and MCP servers to multiple tools."
requires-python = ">=3.11"
dependencies = ["PyYAML>=6.0", "Jinja2>=3.1", "ruamel.yaml>=0.18"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "types-PyYAML"]

[project.scripts]
promptdeploy = "promptdeploy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Git submodule with its own repo and tooling; also absent from the Nix
# flake's src (flakes omit submodule contents), so CI never lints it.
extend-exclude = ["translate-tool"]

[tool.ruff.lint]
# Curated baseline. PTH (flake8-use-pathlib) is deliberately omitted: the
# repo standardizes on tempfile.mkstemp() + os.replace() for atomic writes,
# and PTH would churn that convention across ~74 sites for no behavioral
# gain.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
# The Target ABC deliberately ships empty-bodied lifecycle/settings methods
# (prepare/finalize/cleanup/deploy_settings/...) as no-op defaults so that
# local and non-Claude targets need no boilerplate overrides; marking them
# @abstractmethod would force every target to implement no-ops.
"src/promptdeploy/targets/base.py" = ["B027"]

[tool.mypy]
# Strict typing for the promptdeploy package (src/). `strict` cannot be set
# in per-module overrides, so it is enabled globally here and the noisy
# definition/call checks are relaxed for tests.* below.
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_any_generics = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["promptdeploy"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
